--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
         </div>
         <div class="stars"></div>
+        <div class="new"></div>
     </div>
 </body>
 </html>
