--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </div>
         <div class="stars"></div>
         <div class="new"></div>
+
+        <div class="gameScreen">
+            <h1>Space Eaters v1.0.0</h1>
+            <div class="startGame-button">Start Game</div>
+            <a href="#">GitHub</a>
+        </div>
     </div>
 </body>
 </html>
