--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <div class="startGame-button">Start Game</div>
             <a href="#">GitHub</a>
         </div>
+        <div class="gameOverScreen">
+            <h1>Game Over</h1>
+            <button class="startGame-button playAgain-button">Play Again</button>
+            <a href="#">GitHub</a>
+        </div>
     </div>
 </body>
 </html>
